--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lassie-ui",
+  "name": "@ederzadravec/lassie-ui",
   "version": "1.0.0",
   "repository": "git@github.com:ederzadravec/lassie-ui.git",
   "author": "Éder Zadravec",
@@ -14,8 +14,6 @@
   "private": false,
   "dependencies": {
     "ramda": "^0.27.0",
-    "react-native-vector-icons": "^6.6.0",
-    "styled-components": "^5.0.1",
     "throttle-debounce": "^2.1.0"
   },
   "devDependencies": {
